start develop moving

--- a/css/index.css
+++ b/css/index.css
@@ -9,9 +9,10 @@ html, body {
 }
 body {
 	width: 7.5rem;
-	height: 12rem;
+	/*height: 12rem;*/
 	position: relative;
 	padding-top: 0.29rem;
+	margin: 0 auto;
 }
 html {
 	background: #fff url(../images/bg.png) 0 0 no-repeat;
@@ -25,30 +26,33 @@ input,select {
 	outline:none;
 }
 @media screen and (max-width:321px){
-	.machine .times-left>span{font-size:15px}
-	.machine .btn-confirm>span{font-size:12px}
+	.machine .times-left span{font-size:15px}
+	.machine .btn-confirm span{font-size:12px}
 	.sucsess-page .text-input>*{font-size:12px}
 	.sucsess-page .select-wrapper>select{font-size:15px}
-	.fail-page .word>span {font-size:20px}
+	.fail-page .word span {font-size:20px}
 	.pay-page .text-input>input {font-size:16px}
+	.machine .time {font-size: 12px}
 }
 
 @media screen and (min-width:321px) and (max-width:400px){
-	.machine .times-left>span{font-size:16px}
-	.machine .btn-confirm>span{font-size:13px}
+	.machine .times-left span{font-size:16px}
+	.machine .btn-confirm span{font-size:13px}
 	.sucsess-page .text-input>*{font-size:14px}
 	.sucsess-page .select-wrapper>select{font-size:16px}
-	.fail-page .word>span {font-size:24px}
+	.fail-page .word span {font-size:24px}
 	.pay-page .text-input>input {font-size:17px}
+	.machine .time {font-size: 13px}
 }
 
 @media screen and (min-width:400px){
-	.machine .times-left>span{font-size:18px}
-	.machine .btn-confirm>span{font-size:14px}
+	.machine .times-left span{font-size:18px}
+	.machine .btn-confirm span{font-size:14px}
 	.sucsess-page .text-input>*{font-size:16px}
 	.sucsess-page .select-wrapper>select{font-size:18px}
-	.fail-page .word>span {font-size:28px}
+	.fail-page .word span {font-size:28px}
 	.pay-page .text-input>input {font-size:20px}
+	.machine .time {font-size: 15px}
 }
 .machine {
 	position: relative;
@@ -65,6 +69,7 @@ input,select {
 	background-size: contain;
 	margin: auto;
 }
+
 .machine .sound-control {
 	width: 0.66rem;
 	height: 0.66rem;
@@ -97,7 +102,7 @@ input,select {
 	-webkit-background-size: contain;
 	background-size: contain;
 }
-.machine .rechange {
+.machine .recharge {
 	float: left;
 	margin: .3rem 0 0 .36rem;
 	background: url(../images/recharge02@2x.png) 0 0 no-repeat;
@@ -107,19 +112,25 @@ input,select {
 	margin: .3rem .36rem 0 0;
 	background: url(../images/heart03@2x.png) 0 0 no-repeat;
 }
-.machine .rechange,.machine .times-left {
+.machine .recharge,.machine .times-left {
 	width: 3.04rem;
 	height: .72rem;
 	-webkit-background-size: contain;
 	background-size: contain;
 	position: relative;
 }
-.machine .times-left>span {
+.machine .times-left>div {
 	color: #fff;
 	font-size: 16px;
 	position: absolute;
-	left: .17rem;
-	top: .16rem;
+	left: .15rem;
+	top: .14rem;
+	width: .46rem;
+	height: .4rem;
+	display: -webkit-flex; /* Safari */
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .machine .progress-bar,.machine .progress-bar-now {
 	position: absolute;
@@ -135,7 +146,7 @@ input,select {
 }
 .machine .progress-bar-now {
 	background-color: #a5e24d;
-	width: 3rem;
+	width: .4rem;
 	z-index: 2;
 }
 .machine .worm {
@@ -144,7 +155,7 @@ input,select {
 	background-size: contain;
 	position: absolute;
 	top: -0.03rem;
-	left: 3.8rem;
+	left: 1.1rem;
 	width: .78rem;
 	height: .46rem;
 	z-index: 3;
@@ -159,6 +170,20 @@ input,select {
 	width: .28rem;
 	height: .44rem;
 	z-index: 3;
+}
+.machine .time {
+	/*font-size: 13px;*/
+	color: #fff;
+	position: absolute;
+	top: .04rem;
+	left: .66rem;
+	display: -webkit-flex; /* Safari */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: .4rem;
+	height: .42rem;
+	/*line-height: .42rem*/
 }
 
 .machine .btn-up {
@@ -199,15 +224,17 @@ input,select {
 	width: 1.22rem;
 	height: .96rem;
 }
-.machine .btn-confirm>span {
+.machine .btn-confirm>div {
 	position: absolute;
-	top: .3rem;
-	right: .04rem;
+	top: .24rem;
+	right: -.02rem;
 	color: #fff;
-}
-{
-	position: absolute;
-	border: 1px solid #000;
+	display: -webkit-flex; /* Safari */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: .4rem;
+	height: .4rem;
 }
 .machine .glass-mask,.machine .glass-sec {
 	position: absolute;
@@ -233,7 +260,7 @@ input,select {
 }
 .machine .hook {
 	position: absolute;
-	bottom: .8rem;
+	bottom: 4.3rem;
 	left: 2.4rem;
 }
 .machine .hook-iron {
@@ -247,7 +274,7 @@ input,select {
 .machine .hook-join {
 	width: 1.3rem;
 	height: .7rem;
-	background: url(../images/claw01@2x.png) 0 0;
+	background: url(../images/claw01@2x.png) 0 0 no-repeat;
 	-webkit-background-size: contain;
 	background-size: contain;
 	position: relative;
@@ -255,7 +282,7 @@ input,select {
 	-webkit-transform-origin: 50% .2rem;
 	transform-origin: 50% .2rem;
 /*	-webkit-transform: rotate(10deg);
-	transform: rotate(10deg);*/
+transform: rotate(10deg);*/
 }
 .machine .hook-sub-left,.machine .hook-sub-right {
 	width: .62rem;
@@ -263,25 +290,25 @@ input,select {
 	position: absolute;
 }
 .machine .hook-sub-left {
-	background: url(../images/Lclaw01@2x.png) 0 0;
+	background: url(../images/Lclaw01@2x.png) 0 0 no-repeat;
 	-webkit-background-size: contain;
 	background-size: contain;
 	top:.6rem;
 	left: -0.01rem;
-	-webkit-transform: rotate(20deg);
-	transform: rotate(20deg);
+	-webkit-transform: rotate(30deg);
+	transform: rotate(30deg);
 	-webkit-transform-origin: 0.07rem 0.07rem;
 	transform-origin: 0.07rem 0.07rem;
 }
 
 .machine .hook-sub-right {
-	background: url(../images/Rclaw01@2x.png) 0 0;
+	background: url(../images/Rclaw01@2x.png) 0 0 no-repeat;
 	-webkit-background-size: contain;
 	background-size: contain;
 	top:.6rem;
 	right: -0.01rem;
-	-webkit-transform: rotate(-20deg);
-	transform: rotate(-20deg);
+	-webkit-transform: rotate(-30deg);
+	transform: rotate(-30deg);
 	-webkit-transform-origin: 0.55rem 0.07rem;
 	transform-origin: 0.55rem 0.07rem;
 }
@@ -313,261 +340,279 @@ input,select {
 	height: 5.74rem;
 	top: .65rem;
 	left: .48rem;
-}*/
+	}*/
 
 
 
-.tips,.start-game {
-	/*display: none;*/
-}
-.tips {
-	background: url(../images/TIPS@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	position: absolute;
-	top: 9.29rem;
-	left: 3.05rem;
-	width: 1.4rem;
-	height: .9rem;
-}
-.start-game {
-	background: url(../images/start@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	position: absolute;
-	top: 10.49rem;
-	left: 1.98rem;
-	width: 3.54rem;
-	height: 1.1rem;
-}
+	.tips,.start-game {
+		/*display: none;*/
+	}
+	.tips {
+		background: url(../images/TIPS@2x.png) 0 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+		position: absolute;
+		top: 9.29rem;
+		left: 3.05rem;
+		width: 1.4rem;
+		height: .9rem;
+	}
+	.start-game {
+		background: url(../images/start@2x.png) 0 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+		position: absolute;
+		top: 10.49rem;
+		left: 1.98rem;
+		width: 3.54rem;
+		height: 1.1rem;
+	}
 
-.sucsess-page,.fail-page,.tips-page,.pay-page {
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 999;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0,0,0,0.7);
-	display: none;
-}
-.sucsess-page .word {
-	background: url(../images/Congratulations@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	width: 3.48rem;
-	height: 1.46rem;
-	margin: .2rem auto 0;
-}
-.sucsess-page .doll {
-	background: url(../images/Rabbit-01@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	width: 6.2rem;
-	height: 4.74rem;
-	margin: 0 auto;
-}
-.sucsess-page>form {
-	background: url(../images/information@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	width: 6.82rem;
-	height: 5.2rem;
-	margin: .3rem auto 0;
-	position: relative;
-}
-.sucsess-page .text-input:first-child {
-	top: 1.15rem;
-	background: url(../images/column03@2x.png) .82rem 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-}
-.sucsess-page .text-input:nth-child(2) {
-	top: 2.1rem;
-	background: url(../images/column02@2x.png) .82rem 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-}
-.sucsess-page .text-input:nth-child(3) {
-	top: 3.05rem;
-	background: url(../images/column01@2x.png) .82rem 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-}
-.sucsess-page .text-input>* {
-	display: inline-block;
-}
-.sucsess-page .text-input {
-	position: absolute;
-	left: .42rem;
-	width: 6.06rem;
-	height: .74rem;
-	font-size: 0;
-}
-.sucsess-page .text-input>label {
-	width: 1rem;
-	line-height: .74rem;
-	color: rgb( 166, 114, 53 )
-}
-.sucsess-page .text-input>input {
-	background-color: #a46f34;
-}
-#name {
-	width: 2.32rem;	
-}
-#tel {
-	width: 3.3rem;
-}
-#address {
-	width: 4.7rem;
-}
-.sucsess-page .select-wrapper {
-	background: url(../images/column04@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	width: 2.5rem;
-	height: .74rem;
-	position: absolute;
-	left: 1.2rem;
-	bottom: .5rem;
-	overflow: hidden;
-}
-.sucsess-page .select-wrapper>select {
-	background: transparent;
-	width: 2.11rem;
+	.sucsess-page,.fail-page,.tips-page,.pay-page {
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 999;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0,0,0,0.7);
+		display: none;
+	}
+	.sucsess-page .word {
+		background: url(../images/Congratulations@2x.png) 0 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+		width: 3.48rem;
+		height: 1.46rem;
+		margin: .2rem auto 0;
+	}
+	.sucsess-page .doll {
+		background: url(../images/Rabbit-01@2x.png) 0 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+		width: 6.2rem;
+		height: 4.74rem;
+		margin: 0 auto;
+	}
+	.sucsess-page>form {
+		background: url(../images/information@2x.png) 0 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+		width: 6.82rem;
+		height: 5.2rem;
+		margin: .3rem auto 0;
+		position: relative;
+	}
+	.sucsess-page .text-input:first-child {
+		top: 1.15rem;
+		background: url(../images/column03@2x.png) .82rem 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+	}
+	.sucsess-page .text-input:nth-child(2) {
+		top: 2.1rem;
+		background: url(../images/column02@2x.png) .82rem 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+	}
+	.sucsess-page .text-input:nth-child(3) {
+		top: 3.05rem;
+		background: url(../images/column01@2x.png) .82rem 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+	}
+	.sucsess-page .text-input>* {
+		display: inline-block;
+	}
+	.sucsess-page .text-input {
+		position: absolute;
+		left: .42rem;
+		width: 6.06rem;
+		height: .74rem;
+		font-size: 0;
+	}
+	.sucsess-page .text-input>label {
+		width: 1rem;
+		line-height: .74rem;
+		color: rgb( 166, 114, 53 )
+	}
+	.sucsess-page .text-input>input {
+		background-color: #a46f34;
+	}
+	#name {
+		width: 2.32rem;	
+	}
+	#tel {
+		width: 3.3rem;
+	}
+	#address {
+		width: 4.7rem;
+	}
+	.sucsess-page .select-wrapper {
+		background: url(../images/column04@2x.png) 0 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+		width: 2.5rem;
+		height: .74rem;
+		position: absolute;
+		left: 1.2rem;
+		bottom: .5rem;
+		overflow: hidden;
+	}
+	.sucsess-page .select-wrapper>select {
+		background: transparent;
+		width: 2.11rem;
 
-	padding-left: .75rem;
-	color: #fff;
-	height: .74rem;
-	position: absolute;
-	top: 0;
-	left: 0;
-	display: block;
-}
-.sucsess-page input[type="submit"] {
-	background: url(../images/refer@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	width: .92rem;
-	height: .92rem;
-	position: absolute;
-	right: .36rem;
-	bottom: .4rem;	
-}
+		padding-left: .75rem;
+		color: #fff;
+		height: .74rem;
+		position: absolute;
+		top: 0;
+		left: 0;
+		display: block;
+	}
+	.sucsess-page input[type="submit"] {
+		background: url(../images/refer@2x.png) 0 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+		width: .92rem;
+		height: .92rem;
+		position: absolute;
+		right: .36rem;
+		bottom: .4rem;	
+	}
 
-.fail-page .word {
-	background: url(../images/no@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	width: 5.20rem;
-	height: 2.18rem;
-	margin: .2rem auto 0;
-	position: relative;
-}
-.fail-page .word>span {
-	color: #fb0000;
-	display: block;
-	position: absolute;
-	bottom: 0;
-	left: 1.52rem;
-}
-.fail-page .doll {
-	background: url(../images/Rabbit-02@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	width: 4.04rem;
-	height: 3.96rem;
-	margin: .26rem auto 0;
-}
-.fail-page .continue {
-	background: url(../images/continue@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	width: 3.54rem;
-	height: 1.1rem;
-	margin: .54rem auto 0;
-}
-
-.tips-page .word {
-	background: url(../images/tips03@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	width: 6.8rem;
-	height: 7.22rem;
-	margin: .32rem auto 0;
-}
-
-.pay-page>form {
-	background: url(../images/store@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	width: 6.7rem;
-	height: 5.76rem;
-	margin: .32rem auto 0;
-	padding-top: 1.75rem;
-	position: relative;
-}
-.pay-page .text-input {
-	background: url(../images/recharge05@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	width: 4rem;
-	height: 1.04rem;
-	margin: 0 auto;
-	position: relative;
-}
-.pay-page .text-input>input {
-	display: block;
-	background-color: transparent;
-	width: 1.72rem;
-	text-align: center;
-	position: absolute;
-	top: .41rem;
-	left: 1.3rem;
-}
-.pay-page .btn {
-	width: 4.2rem;
-	height: .68rem;
-	margin: .5rem auto;
-	font-size: 0;
-}
-.pay-page .confirm {
-	background: url(../images/determine@2x.png) 0 0 no-repeat;
-}
-.pay-page .cancel {
-	background: url(../images/cancel@2x.png) 0 0 no-repeat;
-}
-.pay-page .btn>div {
-	display: inline-block;
-	width: 2.1rem;
-	height: .68rem;
-	-webkit-background-size: contain;
-	background-size: contain;
-}
-.pay-page .cancel-1 {
-	background: url(../images/backtrack@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	width: .66rem;
-	height: .68rem;
-	position: absolute;
-	bottom: 1.52rem;
-	left: 1rem;
-}
-.free {
-	position: absolute;
-	top: 1.48rem; 
-	left: 50%;
-	-webkit-transform: translateX(-50%);
-	transform: translateX(-50%);
-	width: 6.7rem;
-	height: 4rem;
-	background: url(../images/free@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	display: none;
-}
-
-/*.pay-page {
+/*	.fail-page {
 	display: block;
 }*/
+
+	.fail-page .word {
+		background: url(../images/no@2x.png) 0 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+		width: 5.20rem;
+		height: 2.18rem;
+		margin: .2rem auto 0;
+		position: relative;
+	}
+	.fail-page .word>div {
+		color: #fb0000;
+		position: absolute;
+		bottom: -0.02rem;
+		left: 1.46rem;
+		display: -webkit-flex; /* Safari */
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: .64rem;
+		height: .46rem;
+	}
+	.fail-page .doll {
+		background: url(../images/Rabbit-02@2x.png) 0 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+		width: 4.04rem;
+		height: 3.96rem;
+		margin: .26rem auto 0;
+	}
+	.fail-page .continue {
+		background: url(../images/continue@2x.png) 0 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+		width: 3.54rem;
+		height: 1.1rem;
+		margin: .54rem auto 0;
+	}
+
+	.tips-page .word {
+		background: url(../images/tips03@2x.png) 0 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+		width: 6.8rem;
+		height: 7.22rem;
+		margin: .32rem auto 0;
+	}
+
+	.pay-page>form {
+		background: url(../images/store@2x.png) 0 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+		width: 6.7rem;
+		height: 5.76rem;
+		margin: .32rem auto 0;
+		padding-top: 1.75rem;
+		position: relative;
+	}
+	.pay-page .text-input {
+		background: url(../images/recharge05@2x.png) 0 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+		width: 4rem;
+		height: 1.04rem;
+		margin: 0 auto;
+		position: relative;
+	}
+	.pay-page .text-input>input {
+		display: block;
+		background-color: transparent;
+		width: 1.72rem;
+		text-align: center;
+		position: absolute;
+		top: .38rem;
+		left: 1.3rem;
+		height: .46rem;
+		line-height: 1;
+		padding: 0;
+	}
+	.pay-page .btn {
+		width: 4.2rem;
+		height: .68rem;
+		margin: .5rem auto;
+		font-size: 0;
+	}
+	.pay-page .confirm {
+		background: url(../images/determine@2x.png) 0 0 no-repeat;
+	}
+	.pay-page .cancel {
+		background: url(../images/cancel@2x.png) 0 0 no-repeat;
+	}
+	.pay-page .btn>div {
+		display: inline-block;
+		width: 2.1rem;
+		height: .68rem;
+		-webkit-background-size: contain;
+		background-size: contain;
+	}
+	.pay-page .cancel-1 {
+		background: url(../images/backtrack@2x.png) 0 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+		width: .66rem;
+		height: .68rem;
+		position: absolute;
+		bottom: 1.52rem;
+		left: 1rem;
+	}
+	.pay-page .add-money {
+		position: absolute;
+		width: .66rem;
+		height: .6rem;
+		bottom: .1rem;
+		right: .1rem;
+	}
+
+
+	.free {
+		position: absolute;
+		top: 1.48rem; 
+		left: 50%;
+		-webkit-transform: translateX(-50%);
+		transform: translateX(-50%);
+		width: 6.7rem;
+		height: 4rem;
+		background: url(../images/free@2x.png) 0 0 no-repeat;
+		-webkit-background-size: contain;
+		background-size: contain;
+		display: none;
+	}
+
