--- a/css/index.css
+++ b/css/index.css
@@ -1,709 +1,8 @@
-html,body,div {
-	margin: 0;
-	padding: 0;
-}
-html, body {
-	-webkit-user-select: none;
-	user-select: none;
-	-webkit-touch-callout: none;
-}
+/*使用选择器指定字体*/
 body {
-	width: 7.5rem;
-	/*height: 12rem;*/
-	position: relative;
-	padding-top: 0.29rem;
-	margin: 0 auto;
-}
-html {
-	background: #fff url(../images/bg.png) 0 0 no-repeat;
-	-webkit-background-size: cover;
-	background-size: cover;
-}
-input,select {
-	border: 0;
-	-webkit-appearance: none;
-	-webkit-tap-highlight-color:rgba(0,0,0,0);
-	outline:none;
-}
-@media screen and (max-width:321px){
-	.machine .times-left span{font-size:15px}
-	.machine .btn-confirm span{font-size:12px}
-	.success-page .text-input>*{font-size:12px}
-	.success-page .select-wrapper>select{font-size:15px}
-	.fail-page .word span {font-size:20px}
-	.pay-page .text-input>input {font-size:16px}
-	.machine .time {font-size: 12px}
+  font-family: 'pingfang';
 }
 
-@media screen and (min-width:321px) and (max-width:400px){
-	.machine .times-left span{font-size:16px}
-	.machine .btn-confirm span{font-size:13px}
-	.success-page .text-input>*{font-size:14px}
-	.success-page .select-wrapper>select{font-size:16px}
-	.fail-page .word span {font-size:24px}
-	.pay-page .text-input>input {font-size:17px}
-	.machine .time {font-size: 13px}
-}
-
-@media screen and (min-width:400px){
-	.machine .times-left span{font-size:18px}
-	.machine .btn-confirm span{font-size:14px}
-	.success-page .text-input>*{font-size:16px}
-	.success-page .select-wrapper>select{font-size:18px}
-	.fail-page .word span {font-size:28px}
-	.pay-page .text-input>input {font-size:20px}
-	.machine .time {font-size: 15px}
-}
-.machine {
-	position: relative;
-	-webkit-transform-origin: 50% 0;
-	transform-origin: 50% 0;
-	-webkit-transform: scale(0.766,0.766);
-	transform: scale(0.766,0.766);
-}
-.machine .title {
-	width: 4.86rem;
-	height: 1.24rem;
-	background: url(../images/name@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	margin: auto;
-}
-
-.machine .sound-control {
-	width: 0.66rem;
-	height: 0.66rem;
-	background: url(../images/sound_04@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	position: absolute;
-	right: 0.6rem;
-	top: 0.37rem;
-}
-.machine .sound-control>img {
+.nav {
 	display: none;
 }
-.machine .machine-body {
-	width: 6.8rem;
-	height: 9.03rem;
-	margin: 0 auto;
-	background: url(../images/body@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	position: relative;
-}
-.machine .body-mask{
-	position: absolute;
-	width: 1.76rem;
-	height: .73rem;
-	top: 6.27rem;
-	left: 0;
-	background: url(../images/body-mask@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	z-index: 99;
-}
-.machine .recharge {
-	float: left;
-	margin: .3rem 0 0 .36rem;
-	background: url(../images/recharge02@2x.png) 0 0 no-repeat;
-}
-.machine .times-left {
-	float: right;
-	margin: .3rem .36rem 0 0;
-	background: url(../images/heart03@2x.png) 0 0 no-repeat;
-}
-.machine .recharge,.machine .times-left {
-	width: 3.04rem;
-	height: .72rem;
-	-webkit-background-size: contain;
-	background-size: contain;
-	position: relative;
-}
-.machine .times-left>div {
-	color: #fff;
-	font-size: 16px;
-	position: absolute;
-	left: .15rem;
-	top: .14rem;
-	width: .46rem;
-	height: .4rem;
-	display: -webkit-flex; /* Safari */
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.progress-bar,.progress-bar-now {
-	position: absolute;
-	left: 1.57rem;
-	top: 1.76rem;
-	height: .16rem;
-	border-radius: .08rem;
-}
-.progress-bar {
-	background-color: #74b7d7;
-	width: 5.4rem;
-	z-index: 1;
-}
-.progress-bar-now {
-	background-color: #a5e24d;
-	width: .4rem;
-	z-index: 2;
-}
-.worm {
-	background: url(../images/pet@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	position: absolute;
-	top: 1.49rem;
-	left: 1.47rem;
-	width: .78rem;
-	height: .46rem;
-	z-index: 3;
-}
-.flag {
-	background: url(../images/flam@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	position: absolute;
-	top: 1.49rem;
-	left: 5.1rem;
-	width: .28rem;
-	height: .44rem;
-	z-index: 3;
-}
-.flag,.worm,.progress-bar,.progress-bar-now {
-	visibility: hidden;
-}
-.machine .time {
-	/*font-size: 13px;*/
-	color: #fff;
-	position: absolute;
-	top: .04rem;
-	left: .66rem;
-	display: -webkit-flex; /* Safari */
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: .4rem;
-	height: .42rem;
-	/*line-height: .42rem*/
-}
-
-.machine .btn-up {
-	background: url(../images/Button01@2x.png) 0 0 no-repeat;
-	top: 6.82rem;
-	left: 3.19rem;
-}
-.machine .btn-left {
-	background: url(../images/Button04@2x.png) 0 0 no-repeat;
-	top: 7.3rem;
-	left: 2.38rem;
-}
-.machine .btn-down {
-	background: url(../images/Button02@2x.png) 0 0 no-repeat;
-	top: 7.71rem;
-	left: 3.19rem;
-}
-.machine .btn-right {
-	background: url(../images/Button03@2x.png) 0 0 no-repeat;
-	top: 7.3rem;
-	left: 3.98rem;
-}
-.machine .ctrl-btn {
-	-webkit-background-size: contain;
-	background-size: contain;
-	position: absolute;
-	width: .74rem;
-	height: .8rem;
-}
-
-.machine .btn-confirm {
-	background: url(../images/ok@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	position: absolute;
-	top: 7.22rem;
-	right: .3rem;
-	width: 1.22rem;
-	height: .96rem;
-}
-.machine .btn-confirm>div {
-	position: absolute;
-	top: .24rem;
-	right: -.02rem;
-	color: #fff;
-	display: -webkit-flex; /* Safari */
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: .4rem;
-	height: .4rem;
-}
-.machine .glass-mask,.machine .glass-sec {
-	position: absolute;
-	width: 5.79rem;
-	height: 5.74rem;
-	top: .65rem;
-	left: .48rem;
-	overflow: hidden;
-}
-.machine .glass-mask>div:first-child {
-	height: .3rem;
-	background-color: rgb( 0, 153, 204 );
-	opacity: 0.8;
-}
-.machine .glass-mask>div:last-child {
-	height: 5.44rem;
-	background-color: rgb( 255, 255, 255 );
-	opacity: 0.102;
-}
-
-.machine .glass-sec {
-	z-index: 2;
-}
-.machine .hook {
-	position: absolute;
-	bottom: 4.3rem;
-	left: 2.4rem;
-	transform-origin:50% 71%;
-	/*transform: scale(0.7,0.7);*/
-}
-.machine .hook-iron {
-	width: .14rem;
-	height: 4.8rem;
-	background: url(../images/Irons@2x.png) 0 0 repeat-y;
-	-webkit-background-size: contain;
-	background-size: contain;
-	margin: 0 auto;
-}
-.machine .hook-join {
-	width: 1.3rem;
-	height: .7rem;
-	background: url(../images/claw01@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	position: relative;
-	top: -0.2rem;
-	-webkit-transform-origin: 50% .2rem;
-	transform-origin: 50% .2rem;
-/*	-webkit-transform: rotate(10deg);
-transform: rotate(10deg);*/
-}
-.machine .hook-sub-left,.machine .hook-sub-right {
-	width: .62rem;
-	height: .82rem;
-	position: absolute;
-}
-.machine .hook-sub-left {
-	background: url(../images/Lclaw01@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	top:.6rem;
-	left: -0.01rem;
-	-webkit-transform: rotate(30deg);
-	transform: rotate(30deg);
-	-webkit-transform-origin: 0.07rem 0.07rem;
-	transform-origin: 0.07rem 0.07rem;
-}
-
-.machine .hook-sub-right {
-	background: url(../images/Rclaw01@2x.png) 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	top:.6rem;
-	right: -0.01rem;
-	-webkit-transform: rotate(-30deg);
-	transform: rotate(-30deg);
-	-webkit-transform-origin: 0.55rem 0.07rem;
-	transform-origin: 0.55rem 0.07rem;
-}
-.machine .doll-catch {
-	background: url() 0 0 no-repeat;
-	-webkit-background-size: contain;
-	background-size: contain;
-	width: 1.3rem;
-	height: 1.96rem;
-	position: absolute;
-	bottom: -1rem;
-	left: -.1rem;
-	transform: rotate(-20deg);
-}
-
-.machine .doll-0 {
-	background: url(../images/Rabbit-03@2x.png) 0 0 no-repeat;
-	width: 1.3rem;
-	height: 1.96rem;
-	bottom: .01rem;
-	left: 2.2rem;
-}
-.machine .doll-1 {
-	background: url(../images/Rabbit-07@2x.png) 0 0 no-repeat;
-	width: 1rem;
-	height: 1.539rem;
-	bottom: 1.8rem;
-	left: 1rem;
-}
-.machine .doll-2 {
-	background: url(../images/Rabbit-05@2x.png) 0 0 no-repeat;
-	width: 1.3rem;
-	height: 1.44rem;
-	bottom: 0.01rem;
-	left: 1.08rem;
-}
-.machine .doll-3 {
-	background: url(../images/Rabbit-06@2x.png) 0 0 no-repeat;
-	width: 1.15rem;
-	height: 2rem;
-	bottom: 0.85rem;
-	left: 0.2rem;
-}
-.machine .doll-4 {
-	background: url(../images/Rabbit-08@2x.png) 0 0 no-repeat;
-	width: 1.15rem;
-	height: 2rem;
-	bottom: 0.75rem;
-	left: 1.28rem;
-}
-.machine .doll-5 {
-	background: url(../images/Rabbit-07@2x.png) 0 0 no-repeat;
-	width: 1.15rem;
-	height: 1.77rem;
-	bottom: 1rem;
-	left: 2.4rem;
-}
-.machine .doll-6 {
-	background: url(../images/Rabbit-05@2x.png) 0 0 no-repeat;
-	width: 1.15rem;
-	height: 1.275rem;
-	bottom: 1.2rem;
-	left: 3.4rem;
-}
-.machine .doll-7 {
-	background: url(../images/Rabbit-03@2x.png) 0 0 no-repeat;
-	width: 1.15rem;
-	height: 1.735rem;
-	bottom: 1rem;
-	left: 4.4rem;
-}
-.machine .doll-8 {
-	background: url(../images/Rabbit-06@2x.png) 0 0 no-repeat;
-	width: 1.3rem;
-	height: 2.26rem;
-	bottom: .01rem;
-	left: 3.2rem;
-}
-.machine .doll-9 {
-	background: url(../images/Rabbit-07@2x.png) 0 0 no-repeat;
-	width: 1.3rem;
-	height: 2rem;
-	bottom: .01rem;
-	left: 4.3rem;
-}
-.machine .doll-10 {
-	background: url(../images/Rabbit-06@2x.png) 0 0 no-repeat;
-	width: 1rem;
-	height: 1.74rem;
-	bottom: 1.8rem;
-	left: 2rem;
-}
-.machine .doll-11 {
-	background: url(../images/Rabbit-03@2x.png) 0 0 no-repeat;
-	width: 1rem;
-	height: 1.508rem;
-	bottom: 1.8rem;
-	left: 3.3rem;
-}
-.machine .dolls>div {
-	-webkit-background-size: contain;
-	background-size: contain;
-	position: absolute;
-	z-index: 0;
-}
-.machine .dolls {
-	position: absolute;
-	width: 5.79rem;
-	height: 5.74rem;
-	top: .65rem;
-	left: .48rem;
-}
-
-
-
-	.tips,.start-game {
-		/*display: none;*/
-	}
-	.tips {
-		background: url(../images/TIPS@2x.png) 0 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-		position: absolute;
-		top: 9.29rem;
-		left: 3.05rem;
-		width: 1.4rem;
-		height: .9rem;
-	}
-	.start-game {
-		background: url(../images/start@2x.png) 0 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-		position: absolute;
-		top: 10.49rem;
-		left: 1.98rem;
-		width: 3.54rem;
-		height: 1.1rem;
-	}
-
-	.success-page,.fail-page,.tips-page,.pay-page {
-		position: fixed;
-		top: 0;
-		left: 0;
-		z-index: 999;
-		width: 100%;
-		height: 100%;
-		background-color: rgba(0,0,0,0.7);
-		display: none;
-	}
-	.success-page .word {
-		background: url(../images/Congratulations@2x.png) 0 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-		width: 3.48rem;
-		height: 1.46rem;
-		margin: .2rem auto 0;
-	}
-	.success-page .doll {
-		background: url(../images/Rabbit-01@2x.png) 0 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-		width: 6.2rem;
-		height: 4.74rem;
-		margin: 0 auto;
-	}
-	.success-page>form {
-		background: url(../images/information@2x.png) 0 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-		width: 6.82rem;
-		height: 5.2rem;
-		margin: .3rem auto 0;
-		position: relative;
-	}
-	.success-page .text-input:first-child {
-		top: 1.15rem;
-		background: url(../images/column03@2x.png) .82rem 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-	}
-	.success-page .text-input:nth-child(2) {
-		top: 2.1rem;
-		background: url(../images/column02@2x.png) .82rem 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-	}
-	.success-page .text-input:nth-child(3) {
-		top: 3.05rem;
-		background: url(../images/column01@2x.png) .82rem 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-	}
-	.success-page .text-input>* {
-		display: inline-block;
-	}
-	.success-page .text-input {
-		position: absolute;
-		left: .42rem;
-		width: 6.06rem;
-		height: .74rem;
-		font-size: 0;
-	}
-	.success-page .text-input>label {
-		width: 1rem;
-		line-height: .74rem;
-		color: rgb( 166, 114, 53 )
-	}
-	.success-page .text-input>input {
-		background-color: rgba(0,0,0,0);
-	}
-	#name {
-		width: 2.22rem;	
-	}
-	#tel {
-		width: 3.2rem;
-	}
-	#address {
-		width: 4.6rem;
-	}
-	.success-page .select-wrapper {
-		background: url(../images/column04@2x.png) 0 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-		width: 2.5rem;
-		height: .74rem;
-		position: absolute;
-		left: 1.2rem;
-		bottom: .5rem;
-		overflow: hidden;
-	}
-	.success-page .select-wrapper>select {
-		background: transparent;
-		width: 2.11rem;
-
-		padding-left: .75rem;
-		color: #fff;
-		height: .74rem;
-		position: absolute;
-		top: 0;
-		left: 0;
-		display: block;
-	}
-	.success-page .submit {
-		background: url(../images/refer@2x.png) 0 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-		width: .92rem;
-		height: .92rem;
-		position: absolute;
-		right: .36rem;
-		bottom: .4rem;	
-	}
-	.success-page input {
-		color: #fff;
-	}
-
-	.fail-page .word {
-		background: url(../images/no@2x.png) 0 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-		width: 5.20rem;
-		height: 2.18rem;
-		margin: .2rem auto 0;
-		position: relative;
-	}
-	.fail-page .word>div {
-		color: #fb0000;
-		position: absolute;
-		bottom: -0.02rem;
-		left: 1.46rem;
-		display: -webkit-flex; /* Safari */
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		width: .64rem;
-		height: .46rem;
-	}
-	.fail-page .word span {
-		line-height: 1;
-	}
-	.fail-page .doll {
-		background: url(../images/Rabbit-02@2x.png) 0 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-		width: 4.04rem;
-		height: 3.96rem;
-		margin: .26rem auto 0;
-	}
-	.fail-page .continue {
-		background: url(../images/continue@2x.png) 0 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-		width: 3.54rem;
-		height: 1.1rem;
-		margin: .54rem auto 0;
-	}
-
-	.tips-page .word {
-		background: url(../images/tips03@2x.png) 0 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-		width: 6.8rem;
-		height: 7.22rem;
-		margin: .32rem auto 0;
-	}
-
-	.pay-page>form {
-		background: url(../images/store@2x.png) 0 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-		width: 6.7rem;
-		height: 5.76rem;
-		margin: .32rem auto 0;
-		padding-top: 1.75rem;
-		position: relative;
-	}
-	.pay-page .text-input {
-		background: url(../images/recharge05@2x.png) 0 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-		width: 4rem;
-		height: 1.04rem;
-		margin: 0 auto;
-		position: relative;
-	}
-	.pay-page .text-input>input {
-		display: block;
-		background-color: transparent;
-		width: 1.72rem;
-		text-align: center;
-		position: absolute;
-		top: .38rem;
-		left: 1.3rem;
-		height: .46rem;
-		line-height: 1;
-		padding: 0;
-	}
-	.pay-page .btn {
-		width: 4.2rem;
-		height: .68rem;
-		margin: .5rem auto;
-		font-size: 0;
-	}
-	.pay-page .confirm {
-		background: url(../images/determine@2x.png) 0 0 no-repeat;
-	}
-	.pay-page .cancel {
-		background: url(../images/cancel@2x.png) 0 0 no-repeat;
-	}
-	.pay-page .btn>div {
-		display: inline-block;
-		width: 2.1rem;
-		height: .68rem;
-		-webkit-background-size: contain;
-		background-size: contain;
-	}
-	.pay-page .cancel-1 {
-		background: url(../images/backtrack@2x.png) 0 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-		width: .66rem;
-		height: .68rem;
-		position: absolute;
-		bottom: 1.52rem;
-		left: 1rem;
-	}
-	.pay-page .add-money {
-		position: absolute;
-		width: .66rem;
-		height: .6rem;
-		bottom: .1rem;
-		right: .1rem;
-	}
-	#money {
-		color: #fff;
-	}
-
-
-	.free {
-		position: absolute;
-		top: 1.48rem; 
-		left: 50%;
-		-webkit-transform: translateX(-50%);
-		transform: translateX(-50%);
-		width: 6.7rem;
-		height: 4rem;
-		background: url(../images/free@2x.png) 0 0 no-repeat;
-		-webkit-background-size: contain;
-		background-size: contain;
-		display: none;
-	}
-
