--- a/css/common.css
+++ b/css/common.css
@@ -10,17 +10,19 @@ li {
 body {
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	-webkit-overflow-scrolling: touch;
-    overflow-scrolling: touch;
-    -webkit-user-select: none;
-    user-select: none;
-    -webkit-text-size-adjust: none;
-    -webkit-touch-callout:none;
+  overflow-scrolling: touch;
+  -webkit-user-select: none;
+  user-select: none;
+  -webkit-text-size-adjust: none;
+  -webkit-touch-callout:none;
+  background-color: #fff;
 }
 a {
 	outline: none;
 	text-decoration: none;
 }
-input[type="text"],textarea {
+input[type="text"],
+textarea {
 	-webkit-appearance: none;
 }
 ul {
@@ -30,15 +32,10 @@ ul {
   font-family: 'pingfang';
   src: url('../font/pingfang.eot');
   src:
-    url('../font/pingfang.eot?#font-spider') format('embedded-opentype'),
-    url('../font/pingfang.woff') format('woff'),
-    url('../font/pingfang.ttf') format('truetype'),
-    url('../font/pingfang.svg') format('svg');
+  url('../font/pingfang.eot?#font-spider') format('embedded-opentype'),
+  url('../font/pingfang.woff') format('woff'),
+  url('../font/pingfang.ttf') format('truetype'),
+  url('../font/pingfang.svg') format('svg');
   font-weight: normal;
   font-style: normal;
-}
-
-/*使用选择器指定字体*/
-body {
-    font-family: 'pingfang';
 }
