--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,103 @@
-/*使用选择器指定字体*/
+body,
+.container,
+.main {
+  width: 7.5rem;
+}
 body {
   font-family: 'pingfang';
+  margin: 0 auto;
 }
 
 .nav {
 	display: none;
 }
+
+.md-header {
+  position: relative;
+  height: .87rem;
+  background-color: #cc0503;
+  text-align: center;
+}
+.md-header a.nav-btn {
+  position: absolute;
+  top: .3rem;
+  left: .3rem;
+  width: .48rem;
+  height: .27rem;
+  background: url(../images/button.png) 0 0 no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+.md-header h2 {
+  margin: 0 auto;
+  font-size: .34rem;
+  line-height: .87rem;
+  font-weight: normal;
+  color: #fff;
+}
+
+.md-banner .swiper-container {
+    width: 7.5rem;
+    height: 5.62rem;
+}
+.md-banner .swiper-slide>img {
+  width: 100%;
+}
+
+.md-content {
+}
+.md-content h3 {
+  padding: .38rem 0 .28rem .2rem;
+  font-size: .29rem;
+  font-weight: normal;
+  color: #e3a402;
+  margin: 0;
+  border-bottom: .02rem solid #d9d9d9;
+}
+.md-content .news-list li {
+  padding: 0 .2rem;
+  display: -webkit-flex;
+  display: flex;
+  height: 1.9rem;
+  border-bottom: .02rem solid #d9d9d9;
+}
+.md-content .news-text h4 {
+  font-size: .26rem;
+  padding-top: .27rem;
+  padding-bottom: .12rem;
+  font-weight: normal;
+  color: #000;
+  margin: 0;
+  flex-shrink: 1;
+}
+.md-content .news-text p {
+  font-size: .23rem;
+  color: #a6a6a6;
+  line-height: 1.4;
+  /*text-overflow: ellipsis;*/
+/*  overflow: hidden;
+  height: .69rem;*/
+  overflow: hidden;  
+  text-overflow: ellipsis;  
+  display: -webkit-box;  
+  -webkit-line-clamp: 2;  
+  -webkit-box-orient: vertical;  
+}
+.md-content .news-img {
+  margin-top: .2rem;
+  margin-left: .2rem;
+  flex-basis: 2rem;
+  flex-shrink: 0;
+  height: 1.5rem;
+}
+.md-content .news-img>img {
+  width: 100%;
+}
+
+
+
+
+
+
+
+
