--- a/轻应用/css/personal_center.css
+++ b/轻应用/css/personal_center.css
@@ -114,8 +114,8 @@ body {
   bottom: .02rem;
   right: .7rem;
   background: url(../images/credit_Q.png) 0 0 no-repeat;
-  -webkit-background-size: cover;
-  background-size: cover;
+  -webkit-background-size: .36rem .36rem;
+  background-size: .36rem .36rem;
 }
 
 .md-main .content {
@@ -182,4 +182,26 @@ body {
   -webkit-box-orient: vertical;
   margin-right: .4rem;
   line-height: 1.3;  
+}
+
+.instruction {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.3);
+  display: none;
+  z-index: 999;
+}
+.instruction>div {
+  position: absolute;
+  width: 7.1rem;
+  height: 5.2rem;
+  top: 1.8rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  border-radius: .34rem;
+  background-color: #fff;
 }
