--- a/轻应用/css/blackboard.css
+++ b/轻应用/css/blackboard.css
@@ -109,6 +109,9 @@ body {
   background: url(../images/Micro-blackboard_like.png) 0 0 no-repeat;
   margin-right: .1rem;
 }
+/*.message-list .liked {
+  background: url(../images/like-large-red.png) 0 0 no-repeat;
+}*/
 .message-list .btn>a {
   display: block;
   width: .38rem;
@@ -141,4 +144,9 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
+}
+.message-list .liked {
+  background: url(../images/like-large-red.png) 0 0 no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
 }
