--- a/轻应用/css/info_wall.css
+++ b/轻应用/css/info_wall.css
@@ -52,10 +52,16 @@
   background: url(../images/Info-Wall_like.png) 0 0 no-repeat;
   margin-right: .04rem;
 }
+/*.content .like>a.liked {
+  background: url(../images/like-large-red.png) 0 0 no-repeat;
+}*/
 .message-list .content .reward>a {
   background: url(../images/Info-Wal_A-reward.png) 0 0 no-repeat;
   margin-right: .04rem;
 }
+/*.content .reward>a.rewarded {
+background: url(../images/reward-red.png) 0 0 no-repeat;
+}*/
 .message-list .content .btn a {
   display: block;
   width: .34rem;
@@ -95,4 +101,77 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
+}
+
+
+.content .like>a.liked {
+  background: url(../images/like-large-red.png) 0 0 no-repeat;
+}
+.content .reward>a.rewarded {
+  background: url(../images/reward-red.png) 0 0 no-repeat;
+}
+.message-list .content .btn a {
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+.reward-details {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0,0,0,0.3);
+  display: none;
+}
+.reward-details .point-select {
+  width: 7.1rem;
+  height: 2.4rem;
+  border-radius: .4rem;
+  background-color: #fff;
+  position: absolute;
+  top: 4.1rem;
+  left: .2rem;
+  border: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.reward-details .point-select a {
+  width: 1.2rem;
+  height: 1rem;
+  font-size: .32rem;
+  margin-right: .5rem;
+  border-radius: .1rem;
+  color: #fff;
+  background-color: #aeabab;
+  display: block;
+  line-height: 1rem;
+  text-align: center;
+}
+.reward-details .point-select a:last-child {
+  margin-right: 0;
+}
+.reward-details .point-select a.selected {
+  background-color: #fed827;
+}
+.reward-details .btn-wrapper {
+  position: absolute;
+  top: 7rem;
+  left: .2rem;
+  width: 7.1rem;
+  height: 1.14rem;
+  background-color: #fff;
+  border-radius: .44rem;
+  overflow: hidden;
+  display: flex;
+  text-align: center;
+  line-height: 1.14rem;
+  font-size: .36rem;
+}
+.reward-details .btn-wrapper>a {
+  flex-grow: 1;
+  color: #cb0404;
+}
+.reward-details .btn-wrapper>a:first-child {
+  border-right: .02rem solid #d7d7d7;
 }
